--- a/web.html
+++ b/web.html
@@ -10,7 +10,7 @@
 <hr>
 <p><a href="index.html">Voltar para página inicial</a></p>
 <h2> A Web </h2>
-<p>A World Wide Web (tradução em português: Rede Mundial de Computadores; em inglês: WWW, A Web) designa um sistema de documentos em hipermídia (ou hipermédia) que são interligados e executados na Internet.</p>
+<p>A World Wide Web (tradução em português: Rede Mundial de Computadores; em inglês: WWW, A Web) designa um sistema de documentos em hipermídia (ou hipermédia) que são interligados e executados na Internet</p>
 
 <figure>
     <img src="imagens/www.png" alt="">
