--- a/web.html
+++ b/web.html
@@ -4,9 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Web - Exercício sobre HTML e CSS </title>
+
+<link rel="stylesheet" href="css/estilos.css">
+
 </head>
 <body>
-<h1> Exercício de HTML e CSS</h1>
+
+
+
+    <div id="container">
+    <h1> Exercício de HTML e CSS</h1>
 <hr>
 <p><a href="index.html">Voltar para página inicial</a></p>
 <h2> A Web </h2>
@@ -47,7 +54,7 @@
 <p><a href="index.html">Voltar para página inicial</a></p>
 <hr>
 
-
+</div>
 </body>
     
 </html>
